WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140960
[Win] WinLauncher crashes on eleventh site visited.
https://bugs.webkit.org/show_bug.cgi?id=140960
Summary
[Win] WinLauncher crashes on eleventh site visited.
Brent Fulgham
Reported
2015-01-27 14:51:10 PST
A bug in the logic for building the menu list of "last ten visited sites" causes a crash when you exceed this value.
Attachments
Patch
(1.31 KB, patch)
2015-01-27 14:56 PST
,
Brent Fulgham
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2015-01-27 14:56:01 PST
Created
attachment 245476
[details]
Patch
Brent Fulgham
Comment 2
2015-01-27 15:37:59 PST
Committed
r179225
: <
http://trac.webkit.org/changeset/179225
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug