[Win] WinLauncher crashes on eleventh site visited https://bugs.webkit.org/show_bug.cgi?id=140960

Reviewed by Anders Carlsson.

* WinLauncher/WinLauncher.cpp:
(WinLauncher::showLastVisitedSites): Don't access off the end of
the history array.


Canonical link: https://commits.webkit.org/158954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179225 268f45cc-cd09-0410-ab3c-d52691b4dbfc